Add GitHub Actions CI workflows and Dependabot configuration
- Add Go CI workflow (go-ci.yml)
  - Test job: unit tests and BDD tests (excluding WIP/skipped)
  - Build job: build verification, gofmt check, and go vet
  - Uses actions/setup-go@v5 with Go 1.25 and module caching
  - Only runs on changes to go files

- Add markdown lint workflow
  - Lint all markdown files on push/PR
  - Uses Node.js 20 and markdownlint-cli2

- Add Dependabot configuration for Go module updates
  - Weekly checks for dependencies in api/go/v1
  - Limit to 10 open PRs

- Add auto-assign workflow for issues and PRs

fix: resolve markdown linter issues

- Convert heading-like lines to proper markdown headings
- Fix table column spacing and alignment
- Update formatting for consistency across docs

--- a/.markdownlint.yml
+++ b/.markdownlint.yml
@@ -222,4 +222,9 @@ MD047: true
 MD048:
   # Code fence style
   style: "consistent"
+
+# MD060/table-column-style - Table column style
+MD060:
+  # Table column style
+  style: "aligned"
 ...
