--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Directories
 .vscode/
 .cursor/
+.venv/
 Abacus.ai*/
 tmp/
 
@@ -35,3 +36,6 @@ tmp/
 
 # Ignore coverage files
 coverage.*
+
+# Ignore Python cache files
+**/__pycache__/
