--- a/.github/workflows/go-bdd.yml
+++ b/.github/workflows/go-bdd.yml
@@ -1,6 +1,6 @@
 name: Go BDD Tests
 
-# NOTE: This workflow uses the 'bdd-ci' target from api/go/v1/Makefile.
+# NOTE: This workflow uses the 'bdd-ci' target from api/go/Makefile.
 #       When modifying BDD test execution, update the Makefile target accordingly.
 
 on:
@@ -16,11 +16,11 @@ concurrency:
 
 jobs:
   bdd-go-v1:
-    name: BDD Tests api/go/v1
+    name: BDD Tests api/go
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: api/go/v1
+        working-directory: api/go
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -29,7 +29,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.25'
-          cache-dependency-path: api/go/v1/go.sum
+          cache-dependency-path: api/go/go.sum
 
       - name: Verify dependencies
         run: go mod verify
