--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -5,7 +5,9 @@
   },
   "ignores": [
     "**/node_modules/**",
-    "tmp/**"
+    "tmp/**",
+    "**/*.plan.md",
+    "**/.*/**"
   ],
   "customRules": [
     ".markdownlint-rules/no-heading-like-lines.js"
