--- a/scripts/requirements-lint.txt
+++ b/scripts/requirements-lint.txt
@@ -1,5 +1,5 @@
 # Python lint tooling for make lint-python and CI (python-lint.yml).
-# Install into a venv: python3 -m venv .venv && .venv/bin/pip install -r requirements-lint.txt
+# Install into a venv: python3 -m venv .venv && .venv/bin/pip install -r scripts/requirements-lint.txt
 # Or use: make venv
 flake8
 pylint
