--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -108,6 +108,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.25'
+          cache-dependency-path: api/go/go.sum
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
