fix(ci,scripts): align python-lint deps and fix F821 in go_markdown
- CI: install lint tooling from scripts/requirements-lint.txt to match local
- go_markdown/_base.py: add from __future__ import annotations for Signature forward ref

--- a/.github/workflows/python-lint.yml
+++ b/.github/workflows/python-lint.yml
@@ -28,7 +28,7 @@ jobs:
           python-version: '3.11'
 
       - name: Install Python lint tooling
-        run: pip install flake8 pylint radon xenon vulture bandit
+        run: pip install -r scripts/requirements-lint.txt
 
       - name: Run python linting
         run: make lint-python
