ci(nvpkg): run go-bdd on main and add nvpkg CI/release workflows
- Run go-bdd job on main branch in go-bdd.yml
- Add nvpkg-ci.yml for cli/nvpkg lint and test
- Add nvpkg-release.yml for release build and artifact

--- a/.github/workflows/go-bdd.yml
+++ b/.github/workflows/go-bdd.yml
@@ -9,6 +9,13 @@ on:
       - 'api/go/**/*.go'
       - 'features/**/*.feature'
       - 'api/go/**/_bdd/**/*.go'
+  push:
+    branches:
+      - main
+    paths:
+      - 'api/go/**/*.go'
+      - 'features/**/*.feature'
+      - 'api/go/**/_bdd/**/*.go'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
