--- a/.github/workflows/nvpkg-ci.yml
+++ b/.github/workflows/nvpkg-ci.yml
@@ -24,7 +24,7 @@ jobs:
         working-directory: cli/nvpkg
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       - name: Set up Go
         uses: actions/setup-go@v5
@@ -49,7 +49,7 @@ jobs:
         working-directory: cli/nvpkg
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       - name: Set up Go
         uses: actions/setup-go@v5
@@ -69,9 +69,9 @@ jobs:
         run: go vet ./...
 
       - name: Run golangci-lint
-        uses: golangci/golangci-lint-action@v7
+        uses: golangci/golangci-lint-action@v9
         with:
-          version: v2.7.0
+          version: latest
           working-directory: cli/nvpkg
 
   build-nvpkg:
@@ -82,7 +82,7 @@ jobs:
         working-directory: cli/nvpkg
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       - name: Set up Go
         uses: actions/setup-go@v5
@@ -104,7 +104,7 @@ jobs:
         working-directory: cli/nvpkg
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       - name: Set up Go
         uses: actions/setup-go@v5
