chore(docs): initial setup for docs standardization (WIP)
- Add docs_standards: README, markdown_conventions, requirements_domains,
  spec_authoring_writing_and_validation
- Add markdownlint custom rule allow-novuspack-anchors (spec/ref/algo)
- Point copilot-instructions and ai_coding_instructions to docs_standards
- Exclude md_test_files from docs-check; update validation _fs.py
- Simplify inline markdown standards in favor of single source of truth

--- a/.github/workflows/docs-check.yml
+++ b/.github/workflows/docs-check.yml
@@ -151,4 +151,4 @@ jobs:
 
       - name: Run markdown linting
         if: always()
-        run: NODE_OPTIONS="--no-warnings=MODULE_TYPELESS_PACKAGE_JSON" markdownlint-cli2 "**/*.md" "#tmp/**"
+        run: NODE_OPTIONS="--no-warnings=MODULE_TYPELESS_PACKAGE_JSON" markdownlint-cli2 "**/*.md" "#tmp/**" "#md_test_files/**"
