--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -11,6 +11,7 @@
     "**/.*/**"
   ],
   "customRules": [
-    ".markdownlint-rules/no-heading-like-lines.js"
+    ".markdownlint-rules/no-heading-like-lines.js",
+    ".markdownlint-rules/allow-novuspack-anchors.js"
   ]
 }
