Add novuspack markdownlint rules; fix lint-markdown exit code
- Add custom rules: heading numbering (segment count, sequence), no
  duplicate headings (normalized), ASCII-only (dev_docs/README exceptions),
  no Unicode arrows (use '=>').
- Add novuspack-utils.js for shared heading/fence/code helpers.
- Register new rules in .markdownlint-cli2.jsonc.
- Makefile lint-markdown: collect paths into tmp list file, run
  markdownlint-cli2 once via xargs -0 -a so linter exit code is preserved.

--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -12,6 +12,11 @@
   ],
   "customRules": [
     ".markdownlint-rules/no-heading-like-lines.js",
-    ".markdownlint-rules/allow-novuspack-anchors.js"
+    ".markdownlint-rules/allow-novuspack-anchors.js",
+    ".markdownlint-rules/novuspack-no-duplicate-headings-normalized.js",
+    ".markdownlint-rules/novuspack-heading-numbering-segment-count.js",
+    ".markdownlint-rules/novuspack-heading-numbering-sequence.js",
+    ".markdownlint-rules/novuspack-ascii-only.js",
+    ".markdownlint-rules/novuspack-no-unicode-arrows.js"
   ]
 }
